Bug 490550 - A reference to an online quote source cannot be used for currency updates
Summary: A reference to an online quote source cannot be used for currency updates
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-20 10:35 UTC by Ralf Habacker
Modified: 2024-12-12 15:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
test case (7.86 KB, text/xml)
2024-07-20 10:54 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-07-20 10:35:33 UTC
STEPS TO REPRODUCE
1. Download an actual snapshot for kmymoney from https://cdn.kde.org/ci-builds/office/kmymoney/master/windows (tested with kmymoney-master-3363-windows-cl-msvc2019-x86_64.7z)
2. unpack archive
3. start kmymoney from the bin dir
4. Open appended file
5. Select menu entry Settings->kmymoney settings->online quote sources
6. install online quote source Yahoo.com [currency]
7. Select the new entry and press "Add reference"
8. Rename the newly added source to "testsource", press okay and leave the settings dialog
9. Select menu entry "Extra"->"Update shares and currency prices"
10. Double click on the source column of the present entry

OBSERVED RESULT
The quote source "testsource" is not present

EXPECTED RESULT
The mentioned source should be shown in the drop down list

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version:  5.115.0
Qt Version: 5.15.13

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2024-07-20 10:54:44 UTC
Created attachment 171818 [details]
test case
Comment 2 Ralf Habacker 2024-07-20 11:05:33 UTC
Git commit cd3a57166312944d48f82eab7644bbf4119c8c76 by Ralf Habacker.
Committed on 20/07/2024 at 11:04.
Pushed by habacker into branch 'master'.

Bug fix when returning the status for a currency conversion

For a reference, the status of the referenced source must be returned,
which was not previously the case.
FIXED-IN:5.2

M  +23   -0    autotests/alkonlinequotesourcetest.cpp
M  +1    -0    autotests/alkonlinequotesourcetest.h
M  +5    -2    src/alkonlinequotesource.cpp
M  +2    -2    src/alkonlinequotesource.h

https://invent.kde.org/office/alkimia/-/commit/cd3a57166312944d48f82eab7644bbf4119c8c76