Bug fix when returning the status for a currency conversion

For a reference, the status of the referenced source must be returned,
which was not previously the case.

BUG:490550
FIXED-IN:5.2